fix js console error & css layout broken

--- a/app/assets/stylesheets/ng_sys.scss
+++ b/app/assets/stylesheets/ng_sys.scss
@@ -6,5 +6,5 @@
 
 
 #nggraph-grid{
-  min-height: 530px;
+  min-height: 535px;
 }
